[package]
name = "gh-bus-factoring"
version = "0.1.0"
edition = "2018"


[lib]
name = "ghbf_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.14.0", features = ["full"] }
